left alignment in headers added maven replacer execution to replace words to avoid hosting content filter  added two existing links under More Documentation menu

--- a/branches/branch-release-1.0/pom.xml
+++ b/branches/branch-release-1.0/pom.xml
@@ -414,6 +414,31 @@
                             <valueFile>src/site/xref-footer</valueFile>
                         </configuration>
                     </execution>
+                    <!-- TODO following execution should be removed once we change the hosting company-->
+                    <execution>
+                        <id>Replace words to by-pass hosting server's content filter</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>target/site/xref/com/smhumayun/mi_plus/MIFactory.html</include>
+                                <include>target/site/xref/com/smhumayun/mi_plus/MIContainerSupport.html</include>
+                            </includes>
+                            <unescape>true</unescape>
+                            <replacements>
+                                <replacement>
+                                    <token>Proxy</token>
+                                    <value>P r o x y</value>
+                                </replacement>
+                                <replacement>
+                                    <token>proxy</token>
+                                    <value>p r o x y</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
